# protobuf-mutator-example

./: .gitignore  CMakeLists.txt  README.md  cifuzz.yaml
src/: CMakeLists.txt  sut.cpp  sut.h
test/: CMakeLists.txt  fuzztest.cpp  mutator_data.proto  post_processor.cpp
